@@ -5,9 +5,8 @@ module LayoutIn2 where
 --In this Example: rename 'list' to 'ls'.
 
 silly :: [Int] -> Int
-silly ls   = case ls   of  (1:xs ) -> 1
+silly ls = case ls of  (1:xs) -> 1
 --There is a comment
-                           (2:xs)
-                             | x < 10    -> 4  where  x = last xs
-                           otherwise -> 12
-
+                       (2:xs)
+                         | x < 10    -> 4  where  x = last xs
+                       otherwise -> 12
